--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <h3>Data 100/Rusn 100 Projects</h3>
 
-        <ul>2023
+        <ul>2023 spring
             <li>
             </li>
             <li>
@@ -20,8 +20,25 @@
             <li>
             </li>
         </ul>
-        
 
+        <ul>2022 spring
+            <li>
+            </li>
+            <li>
+            </li>
+            <li>
+            </li>
+        </ul>
+
+        <ul>2021 fall
+            <li>
+            <a href="###">Characters in Russian Folklore</a>
+            </li>
+            <li>
+            </li>
+            <li>
+            </li>
+        </ul>
 
 
 
