--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <ul>2021 fall
             <li>
-            <a href="###">Characters in Russian Folklore</a>
+            <a href="https://axprok.github.io/practice/projects/2021charactersRsnFolklore.html">Characters in Russian Folklore</a>
             </li>
             <li>
             </li>
