--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         
 
         <link rel="stylesheet" type="text/css" href="stylesPractice.css">
+
+        <script src="myscripts.js"></script>
         
     </head>
 
