--- a/projects/2021charactersRsnFolklore.html
+++ b/projects/2021charactersRsnFolklore.html
@@ -9,5 +9,16 @@
 
     <body>
         <h3>Characters in Russian Folklore (fall 2021)</h3>
+
+        <p>
+        Our Research Question
+        <br>
+        How can we contextualize Russian culture by analyzing the frequency of
+        certain types of characters appearing in folklore?
+        Through distant reading analysis, we will attempt to draw conclusions about the roles of characters in Russian
+        folklore. Using these conclusions, we can make tentative assumptions about broader Russian culture
+        </p>
+
+        
     </body>
 </html>
