--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <a href="#">xxx</a>
+  <a href="https://axprok.github.io/practice/2021charactersRsnFolklore.html">Sample Project</a>
+  <a href="#">xxx</a>
+  <a href="#">xxx</a>
 </div>
 
 <div id="main">
   <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
+</div>
 
 <h2>Data 100/Rusn 100 Projects</h2>
 
@@ -57,8 +58,8 @@
             </li>
         </ul>
 
-  
-</div>
+
+
 
 
 
