--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 
         <ul>2023 spring
             <li>
+            Character Epithets in Russian Folktales
             </li>
             <li>
+            Lexical Analysis of Folktales and Fakeloric Tales
             </li>
             <li>
             </li>
