--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             Lexical Analysis of Folktales and Fakeloric Tales
             </li>
             <li>
+            Repsonses to the Russian Revolution of 1917: Cases of Alexander Blok's 'Twelve' and Isaac Babel's 'Red Cavalry'.
             </li>
         </ul>
 
